--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -8,7 +8,8 @@
 		"description": "{{appDescription}}",
 		"applicationVersion": {
 			"version": "1.0.0"
-		}
+		},
+		"i18n": "i18n/i18n.properties"
 	},
 	"sap.ui": {
 		"_version": "1.3.0",
@@ -41,6 +42,18 @@
 				},
 				"sap.ui.layout": {
 					"minVersion": "1.34.0"
+				}
+			}
+		},
+		"models": {
+			"helloPanel": {
+				"type": "sap.ui.model.json.JSONModel",
+				"uri": "model/HelloPanel.json"
+			},
+			"i18n": {
+				"type": "sap.ui.model.resource.ResourceModel",
+				"settings": {
+					"bundleName": "opensap.myapp.i18n.i18n"
 				}
 			}
 		},
