--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -39,6 +39,7 @@
 			"id": "app"
 		},
 		"autoPrefixId": true,
+		"handleValidation": true,
 		"dependencies": {
 			"minUI5Version": "1.34",
 			"libs": {
