Week 4 Unit 2: Updating and Manipulating Data

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -69,7 +69,14 @@
 			},
 			"": {
 				"dataSource": "mainService",
-				"preload": true
+				"settings": {
+					"defaultBindingMode": "TwoWay",
+					"preload": true,
+					"useBatch": false,
+					"metadataUrlParams": {
+						"sap-documentation": "heading"
+					}
+				}
 			}
 		},
 		"routing": {
